--- a/projetin/pom.xml
+++ b/projetin/pom.xml
@@ -14,6 +14,14 @@
     <artifactId>mysql-connector-java</artifactId>
     <version>8.0.33</version>
   </dependency>
-  </dependencies>
+  
+  
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
   
 </project>
