--- a/projetin/pom.xml
+++ b/projetin/pom.xml
@@ -22,6 +22,13 @@
         <version>4.13.2</version>
         <scope>test</scope>
     </dependency>
+
+  <dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.0.0</version>
+  </dependency>
 </dependencies>
   
+
 </project>
